[tool.poetry]
name = "cribl-utilities"
version = "2.0.6"
description = "A comprehensive tool to streamline migrations and validate configurations."
authors = ["CINQ ICT <info@cinqict.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
click = "8.1.0"
python = "^3.12"
pydantic = "^2.10.6"
PyYAML = "^6.0.2"
requests = "^2.32.4"
tomli = "^2.2.1"
typer = "^0.15.1"
yamllint = "^1.35.1"
urllib3 = ">=2.5.0,<2.6.0"

[tool.poetry.scripts]
cribl-utilities = "cribl_utilities.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
